--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,7 +73,7 @@ section {
     padding: 60px;
 }
 
-/* Hero Style Start */
+/* hero style start */
 .hero{
     background-image: url("../images/hero-bg.jpg");
     height: 600px;
@@ -81,7 +81,7 @@ section {
     background-position: center;
     position: relative;
 }
-/* Hero Syle End */
+/* hero style end */
 
 .hero-form {
     border: 3px solid #024e76;
@@ -123,4 +123,27 @@ section {
     border: none;
     padding: 10px 20px;
     font-size: 16px;
+}
+
+/* what we do */
+.intro {
+    text-align: center;
+}
+
+.intro h2 {
+    font-size: 55px;
+    color: #024e76;
+    margin-bottom: 35px;
+    padding: 0 100px 20px 100px;
+    border-bottom: 3px solid;
+    border-color: #fce138;
+    display: inline-block;
+}
+
+.intro p {
+    line-height: 1.7;
+    color: #39a6b2;
+    width: 80%;
+    font-size: 20px;
+    margin: 0 auto;
 }
