--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -144,30 +144,27 @@ section {
 }
 
 /* what we do */
-.intro {
-    text-align: center;
-}
-
 .intro p {
     line-height: 1.7;
     color: #39a6b2;
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
+    text-align: center;
 }
 
 .steps {
-    text-align: center;
     background: #fce138;
 }
 
 .section-title {
     font-size: 55px;
     color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    display: inline-block;
     border-bottom: 3px solid;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%
 }
 
 .primary-border {
@@ -204,7 +201,6 @@ section {
 
 /* trainers */
 .trainers {
-    text-align: center;
 }
 
 .trainer {
@@ -252,7 +248,6 @@ section {
 
 /* contact */
 .contact {
-    text-align: center;
     background: #024e76;
 }
 
@@ -293,6 +288,10 @@ a:link {
 
 .contact-info address {
     color: white;
+}
+
+.flex-row {
+    display: flex;
 }
 
 /* REACH OUT STYLES END */
