--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,12 +5,11 @@
 }
 
 body {
-    /* more on this crazy alphanumerical value in a minute! */
     color: #39a6b2;
     font-family: Helvetica, Arial, sans-serif;
 }
 
-/* apply styles to <header> */
+/* header and nav styles */
 header {
     padding: 20px 35px;
     background-color: #39a6b2;
@@ -19,7 +18,6 @@ header {
     flex-wrap: wrap;
 }
 
-/* style the header */
 header h1 {
     font-weight: bold;
     font-size: 36px;
@@ -50,7 +48,7 @@ header nav ul li a {
     font-size: 1.55vw;
 }
 
-/* style the footer */
+/* footer styles */
 footer {
     background: #fce138;
     width: 100%;
@@ -75,11 +73,12 @@ footer a {
     color: #024e76;
 }
 
+/* section styles */
 section {
     padding: 60px;
 }
 
-/* hero style start */
+/* hero styles */
 .hero {
     background-image: url("../images/hero-bg.jpg");
     background-size: cover;
@@ -88,7 +87,21 @@ section {
     justify-content: center;
     flex-wrap: wrap;
 }
-/* hero style end */
+
+.hero-cta {
+    width: 35%;
+    text-align: right;
+    margin: 3.5%;
+    color: #fff;
+    font-size: 18px;
+    line-height: 1.3;
+}
+
+.hero-cta h2 {
+    font-style: italic;
+    font-size: 55px;
+    color: #fce138;
+}
 
 .hero-form {
     border: 3px solid #024e76;
@@ -128,22 +141,7 @@ section {
     font-size: 16px;
 }
 
-.hero-cta {
-    width: 35%;
-    text-align: right;
-    margin: 3.5%;
-    color: #fff;
-    font-size: 18px;
-    line-height: 1.3;
-}
-
-.hero-cta h2 {
-    font-style: italic;
-    font-size: 55px;
-    color: #fce138;
-}
-
-/* what we do */
+/* what we do styles */
 .intro p {
     line-height: 1.7;
     color: #39a6b2;
@@ -155,6 +153,54 @@ section {
 
 .steps {
     background: #fce138;
+}
+
+.step {
+    margin: 50px auto;
+    padding-bottom: 50px;
+    width: 80%;
+    border-bottom: 1px solid #393939;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.step h3 {
+    color: #024e76;
+    font-size: 46px;
+    flex: 1 30%;
+}
+
+.step-info {
+    flex: 2 70%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+.step-img {
+    flex: 1 12%;
+    margin-right: 20px;
+}
+
+.step-img img {
+    max-width: 100%;
+}
+
+.step-text {
+    flex: 12;
+}
+
+.step-text p {
+    color: #39a6b2;
+    font-size: 18px;
+}
+
+.step-text h4 {
+    font-size: 26px;
+    line-height: 1.5;
+    color:#024e76;
 }
 
 .section-title {
@@ -175,34 +221,7 @@ section {
     border-color: #39a6b2;
 }
 
-.steps div {
-    margin-bottom: 80px;
-}
-
-.steps img {
-    width: 15%;
-    margin: 10px 0;
-}
-
-.steps h3 {
-    color: #024e76;
-    font-size: 46px;
-    margin-top: 10px;
-}
-
-.steps p {
-    color: #39a6b2;
-    font-size: 23px;
-}
-
-.steps span {
-    font-size: 38px;
-}
-
 /* trainers */
-.trainers {
-}
-
 .trainer {
     width: 900px;
     margin: 0 auto 30px auto;
